tests/NormalTests/paczka1/small_fuzzy/81455836.err
Error in line 1: j4vVmnbqW S66 56,4
Error in line 4: N0SC4VZ S66 88,4
